csc416/assignment_6/tests/fail/syntaxerrors/1/goodcomment.ram15


//This should be a comment
/*This should be another comment*/
